--- a/style.css
+++ b/style.css
@@ -26,10 +26,16 @@ body{
     padding: 1em;
     border: 3px solid cornflowerblue;
     border-radius: 2em;
-    width: 10em;
+    /* width: 10em;
     align-items: center;
-    margin-left: 52em;
+    margin-left: 52em; */
     
+}
+
+.container{
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* .innerBox{
